*** 20010603_5 by db
- backported A1kmm's patch to fix tsinfo



*** 20010603_4 by greg
Silly stupid annoying lame bug.

If an oper (or a client with a presumably large sendq, or something) sent
a large amount of data to the server which was not instantaneously parsed
(ie, their recvQ size broke 4088) the server encountered a deadlock-ish 
condition and never added their fd back to the read select mask. 

I kinda wonder who put that magic number there, but I'm not going to dwell
on it.

Evil bug, you go squish now.


*** 20010603_3 by db
- backported IGNORE bogus TS into 6, its #ifdef'ed for now
  under #ifdef IGNORE_BOGUS_TS
- removed #if 0 code



*** 20010603_2 by leeh
- commited Hwy's patch:

  Fix make install on systems that cannot understand /path//file
  (cygwin et al)


*** 20010603_1 by leeh
- extended the host check for "."'s to also check for ":" so we allow
  IPv6..


*** 20010219_1 by lusky
- minor mode flag fixes (wc)
- older syslog buffer fix


*** 20010218_1 by lusky
- revved patchlevel to 6.0.2
- CLIENT_SERVER was missing from config.h


*** 20010110_2 by lusky
- revved patchlevel to 6.0.1


*** 20010110_1 by lusky
- removed old ban removel code (db)
- removed unused locally_created flag (db)


*** 20010103_2 by lusky
- fixed a spelling error (wc)


*** 20010103_1 by lusky
- revved patchlevel to 6.0 (Houston, we have a release!)


*** 20010102_1 by lusky
backported latest h7 userhost


*** 20001230_1 by lusky
revved patchlevel to rc8
hard DoS could cause restart due to clock lag (db)
Fixes issue of showing C/c/N IPs to users when they should be masked (jdc)
Extends RPC_STATSCONN output to show total number of clients ever
  connected since /restart or startup. (jdc)


*** 20001221_2 by lusky
added IP to I-line is full notice (pro)
fixed rehash help (wc)
updated opers.txt (wc)



*** 20001221_1 by lusky
fixed a compile warning on solaris


*** 20001201_1 by lusky
added Gline Exemption flag ('_') to Ilines


*** 20001126_1 by lusky